Working Laser Beam

--- a/L4D2VR/l4d2vr.vcxproj.filters
+++ b/L4D2VR/l4d2vr.vcxproj.filters
@@ -813,6 +813,9 @@
     <ClInclude Include="worldsize.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="sdk\cnewparticleeffect.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
